--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,3 +4,15 @@
     padding-right : 175px;
     padding-left : 175px;
 }
+
+.bar-transform-button {
+    padding : 20px; 
+    margin : 0 10px; 
+    color : red; 
+    background : white;  
+}
+
+.button-holder {
+    text-align : center;
+    margin-bottom : 60px; 
+}
