--- a/templates/regressionApp/crop_data.html
+++ b/templates/regressionApp/crop_data.html
@@ -2,7 +2,10 @@
 {% load staticfiles %}
 <html lang="en">
 <head>
-    <title>Linear Regression</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Crop Data</title>
     <link rel="stylesheet" href="{%static "css/style.css" %}">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
@@ -20,7 +23,7 @@
                     </option>
                 {% endfor %}
             </select>
-            <button type="submit">Predict</button>
+            <button type="submit">View Data</button>
         </form>
     {% endif %}
 
@@ -28,7 +31,7 @@
 
     {% if prices and years and crop %}
 
-        <h1 id="title" style='display : none'> Predicted Crop Prices for the years 2017 - 2021</h1>
+        <h1 id="title" style='display : none'> Predicted Prices for {{ crop.cropName }} for 2017 - 2021</h1>
         
         {% for pr in prices %}
             <div class="prices" style="display : none;">{{ pr.price }}</div>   
@@ -41,7 +44,17 @@
         <h1>No data available</h1>
     {% endif %}
 
+
+    <!-- <div id="crop-pred" style="min-width: 310px; height: 400px; max-width: 600px; margin: 0 auto"></div> -->
     <div id="crop-pred"></div>
+    <div class="button-holder">
+        <button id="plain" class="bar-transform-button">Plain</button>
+        <button id="inverted" class="bar-transform-button">Inverted</button>
+        <button id="polar" class="bar-transform-button">Polar</button>
+    </div>
+
+
+
     <script src="{% static "libs/highcharts/charts.js" %}"></script>
 </body>
 </html>
