--- a/templates/regressionApp/index.html
+++ b/templates/regressionApp/index.html
@@ -2,7 +2,10 @@
 {%load staticfiles %}
 <html lang="en">
 <head>
-    <title>Linear Regression</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
 <body>
     {% if price %}
@@ -15,9 +18,8 @@
                     </option>
                 {% endfor %}
             </select>
-            <button type="submit", style="position:center">Predict</button>
+            <button type="submit">View Data</button>
         </form>
     {% endif %}
 
 </body>
-</html>
